# make.nu

./: Cargo.toml  README.md
nu_plugin_nuke/: Cargo.toml
nu_plugin_nuke/src/: plugin.rs  sched.rs
src/: cli.rs  main.rs
