[workspace]
resolver = "3"
members = [".", "nu_plugin_nuke"]

[workspace.dependencies]
ahash = "0.8"
boxcar = "0.2"
palc = "0.0.1"
easy-ext = "1.0"
glob = "0.3"
indoc = "2.0"
nu-plugin = "0.106.0"
nu-protocol = "0.106.0"
which = "8.0"

[package]
name = "nuke"
version = "0.1.0"
edition = "2024"

[dependencies]
indoc = { workspace = true }
which = { workspace = true }
palc = { workspace = true }
